Add resource, role, account api

--- a/.env
+++ b/.env
@@ -8,7 +8,15 @@ JWT_SECRET="huydeptraivcl@12345"
 # Nếu expireIn là số thì nó sẽ tính theo giây
 # Nếu expireIn là string thì nó phải quy định thêm các ký tự như 'm', 'h', 'd', 'w'
 # string mà o quy định thì nó sẽ tính theo milisecond
-ACCESS_TOKEN_EXPIRES_IN='2d' 
+JWT_SECRET_ACCESS_TOKEN = 'lunaspa12345!@#accesstoken'
+JWT_SECRET_REFRESH_TOKEN = 'lunaspa12345!@#refreshtoken'
+JWT_SECRET_EMAIL_VERIFY_TOKEN = 'lunaspa12345!@#emailverify'
+ACCESS_TOKEN_EXPIRES_IN='1d' 
 REFRESH_TOKEN_EXPIRES_IN='100d'
 EMAIL_VERIFY_TOKEN_EXPIRES_IN='7d'
 FORGOT_PASSWORD_TOKEN_EXPIRES_IN='7d'
+# Collection
+DB_ACCOUNTS_COLLECTION="accounts"
+DB_RESOURCES_COLLECTION="resources"
+DB_ROLES_COLLECTION="roles"
+DB_REFRESH_TOKENS_COLLECTION="refresh_tokens"
