--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript-eslint": "^8.24.1"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.750.0",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "cors": "^2.8.5",
