Updated login swagger

--- a/openapi/paths.yaml
+++ b/openapi/paths.yaml
@@ -1,17 +1,6 @@
 openapi: 3.0.3
 info:
-  title: Swagger Petstore - OpenAPI 3.0
-  description: |-
-    This is a sample Pet Store Server based on the OpenAPI 3.0 specification.  You can find out more about
-    Swagger at [https://swagger.io](https://swagger.io). In the third iteration of the pet store, we've switched to the design first approach!
-    You can now help us improve the API whether it's by making changes to the definition itself or to the code.
-    That way, with time, we can improve the API in general, and expose some of the new features in OAS3.
-
-    _If you're looking for the Swagger 2.0/OAS 2.0 version of Petstore, then click [here](https://editor.swagger.io/?url=https://petstore.swagger.io/v2/swagger.yaml). Alternatively, you can load via the `Edit > Load Petstore OAS 2.0` menu option!_
-
-    Some useful links:
-    - [The Pet Store repository](https://github.com/swagger-api/swagger-petstore)
-    - [The source API definition for the Pet Store](https://github.com/swagger-api/swagger-petstore/blob/master/src/main/resources/openapi.yaml)
+  title: Swagger LunaSpa - OpenAPI 3.0  
   termsOfService: http://swagger.io/terms/
   contact:
     email: apiteam@swagger.io
@@ -22,45 +11,74 @@ info:
 externalDocs:
   description: Find out more about Swagger
   url: http://swagger.io
+#Determine server port
 servers:
   - url: http://localhost:4000
-tags:
-  - name: users
-    description: Các API liên quan đến người dùng twitter
+
+tags: #Tag for all functions
+  - name: user
+    description: User functions
+  
 paths:
-  /users/login:
-    post:
+  /user/login:
+    get:
       tags:
-        - users
-      summary: Đăng nhập
-      description: Đăng nhập vào hệ thống x clone
+        - user
+      summary: Login
+      description: Login
       operationId: login
+      
       requestBody:
-        description: Thông tin đăng nhập
+        description: Login information
         content:
           application/json:
             schema:
               $ref: './components.yaml#/components/schemas/LoginBody'
         required: true
       responses:
-        '200':
-          description: Đăng nhập thành công
+        200:
+          description: Login successful
           content:
             application/json:
               schema:
                 type: object
                 properties:
+                  statusCode:
+                    type: integer
+                    example: 200
                   message:
                     type: string
-                    example: Login success
+                    example: "Login successful"
                   result:
-                    $ref: './components.yaml#/components/schemas/SuccessAuthentication'
-        '422':
-          description: Invalid input
-  /users/me:
+                    type: object
+                    properties:
+                      token:
+                        type: string
+                        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+                      refreshToken:
+                        type: string
+                        example: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+        404:
+          description: User not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  statusCode:
+                    type: integer
+                    example: 404
+                  message:
+                    type: string
+                    example: "User not found"
+                  result:
+                    type: object
+                    properties: {}
+    
+  /user/me:
     get:
       tags:
-        - users
+        - user
       summary: Lấy thông tin user
       description: Lấy thông tin user
       operationId: getMe
