--- a/openapi/components.yaml
+++ b/openapi/components.yaml
@@ -10,6 +10,13 @@ components:
           type: string
           example: Duoc123!
 
+    LogoutBody:
+      type: object
+      properties:
+        refreshToken:
+          type: string
+          example: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyX2...
+
     #Bo khong dung nua
     # SuccessAuthentication:
     #   type: object
